# ChineseChessWithMinimaxSearch

./: .gitignore  README.md  pyproject.toml
data/: experiment_summary_medium.md  experiment_summary_medium_decision_loss.md  experiment_summary_medium_huber_clip_mlp.md  experiment_summary_medium_old_mlp.md  experiment_summary_smoke.md  experiment_summary_smoke_plus.md  experiment_summary_smoke_plus_v2.md  medium_experiment_analysis_report.md  mlp_eval_smoke.pt  mlp_train_smoke.csv  nnue_training_data.csv.checkpoint.json  nnue_training_data.csv.checkpoint.json.tmp  worst_case_inspection_medium.md
data/nnue/: nnue_epoch_metrics.csv  nnue_run_metadata.json  nnue_test.csv  nnue_test_comparison.csv  nnue_training_report.md  nnue_val.csv  xiangqi_nnue.pt
docs/: migration_report_phase1.md
engine/: __init__.py  core.py  evaluation.py  move_ordering.py  rules.py  search.py
eval/: __init__.py  combined.py  material.py  mobility.py  piece_square.py
experiments/: analyze_benchmark.py  benchmark.py  evaluate_mlp_model.py  evaluation_benchmark.py  evaluator_registry.py  generate_mlp_training_data.py  generate_nnue_training_data.py  inspect_worst_case.py  mlp_evaluator.py  run_match.py  self_play_tournament.py  train_mlp_evaluator.py  train_nnue_evaluator.py
scripts/: parity_runner.py
search/: __init__.py  alphabeta.py  minimax.py  ordering.py
tests/: test_core.py  test_evaluation.py  test_evaluator_registry.py  test_experiment_scripts.py  test_generate_nnue_training_data.py  test_mlp_evaluator.py  test_move_ordering.py  test_rules.py  test_search.py
(+45 files in other folders)
