[project]
name = "chinese-chess"
version = "0.1.0"
description = "A testable Python rules layer for Xiangqi adversarial-search experiments."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ml = [
  "torch>=2.0",
  "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
